--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,11 @@
           <artifactId>camel-mail</artifactId>
           <version>2.13.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.camel</groupId>
+          <artifactId>camel-gson</artifactId>
+          <version>2.13.0</version>
+      </dependency>
+
   </dependencies>
 </project>
