--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
           <artifactId>camel-gson</artifactId>
           <version>2.13.0</version>
       </dependency>
+      <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <version>1.1.3</version>
+      </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
 
   </dependencies>
 </project>
